@@ -575,9 +575,10 @@ public class ManagementServiceAsyncOperationsTest extends AbstractAsyncOperation
   protected List<Job> getAllJobs() {
     return managementService.createJobQuery().list().stream()
         .filter(j -> j.getProcessInstanceId() != null)
-        .collect(Collectors.toList());
+        .toList();
   }
 
+  @Override
   protected List<String> startTestProcesses(int numberOfProcesses) {
     ArrayList<String> processIds = new ArrayList<>();
 
