@@ -21,7 +21,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.assertj.core.api.Assertions;
@@ -133,11 +132,11 @@ public class ProcessInstanceAssert extends AbstractProcessAssert<ProcessInstance
     Stream <ActivityInstance> flattendActivityInstances = collectAllDecendentActivities(activityInstanceTree);
 
     Stream<String> decendentActivityIdStream = flattendActivityInstances
-        .flatMap(activityInstance -> getActivityIdAndCollectTransitions(activityInstance));
+        .flatMap(this::getActivityIdAndCollectTransitions);
     List<String> decendentActivityIds = decendentActivityIdStream.filter(
         // remove the root id from the list
         activityId -> !activityId.equals(activityInstanceTree.getActivityId())
-    ).collect(Collectors.toList());
+    ).toList();
 
     final String message = "Expecting %s " +
       (isWaitingAt ? "to be waiting at " + (exactly ? "exactly " : "") + "%s, ": "NOT to be waiting at %s, ") +
@@ -168,7 +167,7 @@ public class ProcessInstanceAssert extends AbstractProcessAssert<ProcessInstance
     ActivityInstance[] childActivityInstances = root.getChildActivityInstances();
     return Stream.concat(
         Stream.of(root),
-        Arrays.stream(childActivityInstances).flatMap(child -> collectAllDecendentActivities(child))
+        Arrays.stream(childActivityInstances).flatMap(this::collectAllDecendentActivities)
     );
   }
 
